force-app/main/default/objects/Tournament__c/fields/Entry_Fee__c.field-meta.xml
<CustomField>
    <fullName>Entry_Fee__c</fullName>
    <label>Entry Fee</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Tournament entry fee per team</description>
</CustomField>