force-app/main/default/objects/Tournament__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Robin</fullName>
                <default>true</default>
                <label>Round Robin</label>
            </value>
            <value>
                <fullName>Single Elimination</fullName>
            </value>
            <value>
                <fullName>Double Elimination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Tournament format</description>
</CustomField>