force-app/main/default/objects/Tournament__c/fields/Host_Arena__c.field-meta.xml
<CustomField>
    <fullName>Host_Arena__c</fullName>
    <label>Host Arena</label>
    <type>Lookup</type>
    <referenceTo>Arena__c</referenceTo>
    <relationshipLabel>Tournaments</relationshipLabel>
    <relationshipName>Tournaments</relationshipName>
    <description>Primary host arena for the tournament</description>
</CustomField>