force-app/main/default/objects/Tournament__c/fields/Max_Teams__c.field-meta.xml
<CustomField>
    <fullName>Max_Teams__c</fullName>
    <label>Max Teams</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Maximum number of teams allowed</description>
</CustomField>